--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <header>
         <h2>The Basic Language of the Web: HTML</h2>
         <img
-          src="/02-HTML-Fundamentals/img/laura-jones.jpg"
+          src="/img/laura-jones.jpg"
           alt="Headshot of Laura Jones"
           height="50"
           width="50"
         />
         <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
         <img
-          src="/02-HTML-Fundamentals/img/post-img.jpg"
+          src="/img/post-img.jpg"
           alt="HTML code on a screen"
           width="500"
           height="200"
@@ -90,7 +90,7 @@
       <ul>
         <li>
           <img
-            src="/02-HTML-Fundamentals/img/related-1.jpg"
+            src="/img/related-1.jpg"
             width="75"
             height="75"
             alt="Person Programming"
@@ -99,7 +99,7 @@
         <p><em>By Jonas schmedtmann</em></p>
         <li>
           <img
-            src="/02-HTML-Fundamentals/img/related-2.jpg"
+            src="/img/related-2.jpg"
             width="75"
             height="75"
             alt="Lightning"
@@ -108,7 +108,7 @@
         </li>
         <li>
           <img
-            src="/02-HTML-Fundamentals/img/related-3.jpg"
+            src="/img/related-3.jpg"
             width="75"
             height="75"
             alt="OnScreen Coding"
