--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>The Basic Language of the Web: HTML</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -13,6 +14,7 @@
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
       </nav>
+      <p>test</p>
     </header>
     <article>
       <header>
@@ -23,7 +25,9 @@
           height="50"
           width="50"
         />
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
         <img
           src="/img/post-img.jpg"
           alt="HTML code on a screen"
@@ -87,7 +91,7 @@
     </article>
     <aside>
       <h4>Related posts</h4>
-      <ul>
+      <ul class="related-list">
         <li>
           <img
             src="/img/related-1.jpg"
@@ -96,7 +100,7 @@
             alt="Person Programming"
           /><a href="#">How to Learn Web Development</a>
         </li>
-        <p><em>By Jonas schmedtmann</em></p>
+        <p class="related-author">By Jonas schmedtmann</p>
         <li>
           <img
             src="/img/related-2.jpg"
@@ -104,7 +108,7 @@
             height="75"
             alt="Lightning"
           /><a href="#">The Unknown Powers of CSS</a>
-          <p><em>By Jim Dillon</em></p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img
@@ -113,10 +117,10 @@
             height="75"
             alt="OnScreen Coding"
           /><a href="#">Why JavaScript is Awesome</a>
-          <p><em>By Matilda</em></p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
-    <footer>Copyright &copy; 2027 by The Code Magazine</footer>
+    <footer id="copyright">Copyright &copy; 2027 by The Code Magazine</footer>
   </body>
 </html>
